# PokemonRemake

./: CMakeLists.txt  GLFWWindow.cpp  GLFWWindow.hpp  Game.hpp  GameLoader.hpp  GameWindow.cpp  main.cpp
PokemonRemake/Graphics/: RenderCommand.cpp  RenderCommand.hpp  ShaderProgram.cpp  ShaderProgram.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
PokemonRemake/Graphics/OpenGL/: RenderCommand.cpp  RenderCommand.hpp  ShaderProgram.cpp  ShaderProgram.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
PokemonRemake/IO/: GameLoader.cpp  GameLoader.hpp
PokemonRemake/Logger/: ConsoleLogger.cpp  ConsoleLogger.hpp  Logger.cpp  Logger.hpp
PokemonRemake/Renderer/: Renderer.cpp  Renderer.hpp
PokemonRemake/ResourceManagement/: ResourceManager.cpp  ResourceManager.hpp  ResourceManagerStd.cpp  ResourceManagerStd.hpp
PokemonRemake/Windowing/: GLFWWindow.cpp  GLFWWindow.hpp  Window.cpp  Window.hpp
